dataset1235/2025-2/805158916/users/2689107057/executions/1584167357_2935826613.log
== RUN (2025-08-27 14:39:16)
-- CODE: 
celsius = float(input("digite  grau celsius: "))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite  grau celsius: 32.0
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
digite  grau celsius: 428.18
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
digite  grau celsius: 105.26
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
digite  grau celsius: 50.36
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
digite  grau celsius: 54.32
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
digite  grau celsius: 104.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:33:55)
-- CODE: 
celsius = (input("digite  grau celsius": ))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 1
    celsius = (input("digite  grau celsius": ))
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 1
    celsius = (input("digite  grau celsius": ))
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 1
    celsius = (input("digite  grau celsius": ))
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 1
    celsius = (input("digite  grau celsius": ))
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 1
    celsius = (input("digite  grau celsius": ))
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 1
    celsius = (input("digite  grau celsius": ))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:33:35)
-- CODE: 
celsius = (input("digite  grau celsius"))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:39:22)
-- CODE: 
celsius = float(input("digite  grau celsius: "))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite  grau celsius: 32.0
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
digite  grau celsius: 428.18
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
digite  grau celsius: 105.26
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
digite  grau celsius: 50.36
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
digite  grau celsius: 54.32
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
digite  grau celsius: 104.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:34:39)
-- CODE: 
celsius = float(input("digite  grau celsius": ))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 1
    celsius = float(input("digite  grau celsius": ))
                                                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 1
    celsius = float(input("digite  grau celsius": ))
                                                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 1
    celsius = float(input("digite  grau celsius": ))
                                                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 1
    celsius = float(input("digite  grau celsius": ))
                                                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 1
    celsius = float(input("digite  grau celsius": ))
                                                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 1
    celsius = float(input("digite  grau celsius": ))
                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
